# tinyjit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fib.tj  mathlib.tj
tests/: test_assembler.py  test_cli.py  test_executor.py  test_interpreter.py  test_jit.py  test_syntax.py
tinyjit/: __init__.py  __main__.py  assembler.py  cli.py  compiler.py  executor.py  interpreter.py  jit.py  syntax.py
